# cyberfabric-core

./: CHANGELOG.md  Cargo.toml  Makefile
.cypilot-adapter/: artifacts.json
.cypilot/config/: artifacts.toml  core.toml
apps/gts-docs-validator/: Cargo.toml  README.md
apps/gts-docs-validator/src/: main.rs
apps/hyperspot-server/: Cargo.toml
config/: e2e-local.yaml  mini-chat.yaml  quickstart.yaml  server.yaml
dylint_lints/: Cargo.toml
libs/modkit-canonical-errors/: Cargo.toml  README.md
libs/modkit-canonical-errors-macros/: Cargo.toml  (+1 more)
libs/modkit-canonical-errors/src/: builder.rs  context.rs  error.rs  kind.rs  lib.rs  problem.rs
libs/modkit-canonical-errors/tests/: context.rs  error.rs  problem.rs  resource_error_macro.rs  showcase.rs
libs/modkit-canonical-errors/tests/ui/: invalid_gts_resource_type.rs  invalid_gts_resource_type.stderr  missing_field_violation_on_invalid_argument.rs  missing_field_violation_on_invalid_argument.stderr  missing_precondition_violation_on_failed_precondition.rs  missing_precondition_violation_on_failed_precondition.stderr  missing_quota_violation_on_resource_exhausted.rs  missing_quota_violation_on_resource_exhausted.stderr  missing_reason_on_aborted.rs  missing_reason_on_aborted.stderr  missing_reason_on_out_of_range.rs  missing_reason_on_out_of_range.stderr  missing_reason_on_permission_denied.rs  missing_reason_on_unauthenticated.rs  missing_reason_on_unauthenticated.stderr  missing_resource_on_not_found.rs  missing_resource_on_not_found.stderr  retry_after_only_on_service_unavailable.rs
scripts/: coverage.py
(+309 files in other folders)
