[package]
name = "cf-modkit-canonical-errors"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "ModKit canonical error types based on Google AIP-193 error model"
readme = "README.md"
keywords = ["cyberfabric", "cyberfabric-modkit"]
categories = ["rust-patterns"]

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
modkit-canonical-errors-macros = { workspace = true }
gts-id = { workspace = true }
gts-macros = { workspace = true }
gts = { workspace = true }
schemars = { workspace = true }
